# nexus

./: .gitignore  README.md  ffo.pgm  ffo.yaml  ffo2.pgm  ffo2.yaml  frames_2026-01-26_01.34.08.gv  frames_2026-01-29_00.39.38.gv  frames_2026-01-29_02.30.43.gv  frames_2026-01-30_19.09.30.gv  frames_2026-01-31_01.30.47.gv  frames_2026-01-31_01.31.39.gv  frames_2026-01-31_01.33.15.gv  slam_toolbox_replay.yaml
install/: local_setup.sh  setup.sh
install/nexus_base_ros/share/nexus_base_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nexus_base_ros/share/nexus_base_ros/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nexus_base_ros__rosidl_generator_cExport-noconfig.cmake  export_nexus_base_ros__rosidl_generator_cExport.cmake  export_nexus_base_ros__rosidl_generator_cppExport.cmake  export_nexus_base_ros__rosidl_generator_pyExport.cmake  export_nexus_base_ros__rosidl_typesupport_fastrtps_cExport.cmake  export_nexus_base_ros__rosidl_typesupport_fastrtps_cppExport.cmake  nexus_base_ros__rosidl_typesupport_cExport.cmake  nexus_base_ros__rosidl_typesupport_cppExport-noconfig.cmake  nexus_base_ros__rosidl_typesupport_cppExport.cmake  nexus_base_ros__rosidl_typesupport_introspection_cExport-noconfig.cmake  nexus_base_ros__rosidl_typesupport_introspection_cExport.cmake  nexus_base_ros__rosidl_typesupport_introspection_cppExport.cmake
install/nexus_base_ros/share/nexus_base_ros/launch/: nexus_bringup.launch.py
log/: latest_build
(+60 files in other folders)
